# libgtkentrymask

./: .gitignore  AUTHORS  Makefile.am  README  configure.ac  gtkentrymask.c  gtkentrymask.h  libgtkentrymask-2.0.pc.in  test-gtkentrymask.c
